# HelloWorldApp

./: .gitignore  CMakeLists.txt
3rd/str/: CMakeLists.txt  str_test.c
docs/: target**中的PUBLIC PRIVATE INTERFACE.md
examples/: CMakeLists.txt  struct_init.c
examples/cxx/: CMakeLists.txt  greeting.cpp
examples/cxx/json/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.c
src/hello-world/: CMakeLists.txt  hello-world.c  hello-world.h
src/hello-world/hello/: CMakeLists.txt  hello.c  hello.h
